2024-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha03: Palenque';git push
	git tag -a 5.2.9-alpha03 -m 'ncks: S1D finish topounits, workaround bad topos1d_[ij]xy, address sanitize';git push --tags

	* Activate pft_sng_out those disable inferring from global attributes

	* Enable Clang address sanitizer with -fsanitize=address

	* Account for lvl_nbr (i.e., ltype dimension) in unpacking nco_s1d_tpo variables

	* Change storage order ot nco_s1d_tpo to always be lat,lon

	* Discover buggy topos1d_[ij]xy in input files, provide workaround by replacing with grids1d_[ij]xy

	* Sanity check that tpo_nbr_in == grd_nbr_in

	* Sanity check that mec_nbr_in == mec_nbr_out

	* Correct argument order of nco_malloc_dbg() call in nco_cpy_var_val()

	* Define lnd_typ_crr=nco_lnd_ilun_nil for Gridcell and Topounit	variables so diagnostic printing can work

	* Print var_nm in nco_def_var() debugging output

	* Add fflush() to tidy debugging output

2024-10-16  Charlie Zender  <zender@uci.edu>

	* Store enumerated PFT and CFT in pft coordinate variable

2024-10-15  Charlie Zender  <zender@uci.edu>

	* Output pft coordinate as NC_STRING (not 2D NC_CHAR) when fl_fmt_out == NC_FORMAT_NETCDF4

	* NCO 5.2.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha02: Adieu Borrego';git push
	git tag -a 5.2.9-alpha02 -m 'ncclimo: fix bsh syn, fix eamxx pdq; ncks: S1D fix hst pft, add pft crd';git push --tags

	* Add PFT string coordinate to output files

	* Assume PFT storage order in history files is same as in restart files
	This shifts the original convention that worked with beth_in.nc to the newer eva_h2.nc convention

2024-10-14  Charlie Zender  <zender@uci.edu>

	* Define dmn_cnt_out before using it to determine lvl_nbr in nco_s1d.c:nco_s1d_unpack()

2024-10-02  Charlie Zender  <zender@uci.edu>

	* Fix typo pdq_opt='-a ilev,l%8jev,plev,dim2,ncol' that causes eamxx regridding to fail
